tests/codegen/fail/unsupported_cleanup_capturing_closure_value_build.ql
extern "c" fn first()

fn main() -> Int {
    defer first()
    let value = 1
    let capture = () => value
    return capture()
}
