tests/codegen/fail/unsupported_cleanup_capturing_closure_value_build.stderr
error: tests/codegen/fail/unsupported_cleanup_capturing_closure_value_build.ql:6:19: LLVM IR backend foundation currently only supports non-capturing sync closure values
      let capture = () => value
                    ^^^^^^^^
